# VASAE

./: .gitignore  AGENT.md  CLAUDE.md  CONTRIBUTING.md  README.md  SAE.ipynb  SAE_activations.ipynb  activation_cache.pkl  collect_gpt2_activations.py  compute_ppl.py  compute_ppl_gpt2_openwebtext.py  dataset.py  draw_gpt2_VASAE_reconstruct_loss.ipynb  gpt2.ipynb  index.html  logit_len.ipynb  models.py  paper_plan.md  pyproject.toml  readme.md  reformat.py  report.md  requirement.tex  requirements.txt  sae_activations.py  save_ac.py  save_activations.ipynb  save_gpt2_activations.py  save_gpt2_activations_openwebtext.py  train_sae.py  train_sae_gpt2.py  utils.py  validate_gpt2_ppl.py  validate_gpt2_squad.py  vasae.py
.claude/: settings.json
.crossnote/: config.js
assets/: gallery-data.js  gallery.json  site.js  styles.css
configs/: example.py
docs/: limitations.md  method.md  reproduction.md
notebooks/: draw_gpt2_VASAE_reconstruct_loss.ipynb  eda.ipynb  ll_acc.ipynb  logit_len.ipynb  lower_bound.ipynb
scripts/: analyze_alignment.py  analyze_alignment_quality.py  analyze_context_interpretability.py  analyze_feature_io_decomposition.py  analyze_feature_vocab_alignment.py  analyze_ioi_features.py  analyze_logit_attribution_sparsity.py  analyze_missing_components.py  analyze_nonvocab_subspace.py  analyze_tgeo_by_token_type.py  analyze_tgeo_data.py  analyze_tgeo_weight_only.py  analyze_token_frequency.py  casestudy_ioi_features.py  cluster_embeddings.py  collect_ablation_results.py  collect_benchmarking_results.py  collect_gpt2_activations.py  collect_llava_activations.py  compute_ppl_gpt2_openwebtext.py  detokenize.py  eval_ioi_causal.py  eval_ioi_feature_sweep.py  eval_loss_recovered.py  eval_reconstruction.py  eval_sae_online.py  exp_decompose_and_reconstruct.py  fixup_llava_meta.py  inference.py  make_paper_figures.py  plot_alignment_quality.py  plot_decomposition_results.py  plot_interlayer_angles.py  plot_ioi_feature_sweep.py  plot_soft_align_sweep.py  plot_tgeo_meaning.py  train_decompose_sae.py  train_dualpath_sae.py  train_sae_gpt2.py  train_sae_gpt2_hf.py  (+6 more)
tests/: test_alive_alignment.py  test_analysis.py  test_corpus_windows.py  test_decompose_sae.py  test_dualpath_sae.py  test_encoders.py  test_factory.py  test_imports.py  test_losses.py  test_metrics.py  test_online_model_helpers.py  test_online_results.py  test_online_sources.py  test_sae_model.py  test_sparsity.py  test_trainer.py  test_variance_explained.py
(+350 files in other folders)
