[project]
name = "vasae"
version = "0.1.0"
description = "Sparse autoencoders with vocabulary-anchor regularization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.6.1",
    "nnsight>=0.4",
    "numpy>=2.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
wandb = [
    "wandb>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = { "src" = "" }
